--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <title>ToDoList</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <link rel="stylesheet" href="to-do-list\src\app\Mycomponents\todos\todos.component.css"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  
 </body>
 </html>
