--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ToDoList</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" href="to-do-list\src\app\Mycomponents\todos\todos.component.css"> -->
+  <link rel="stylesheet" href="\src\styles.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+
+<body >
   <app-root></app-root>
-  
+
 </body>
+
 </html>
